--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -29,9 +29,10 @@
            
             
             <li class="nav-item">
-              <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">
+              <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"><span>USER</span>
               
-              <!--<span th:text="${user.name}"></span></a>  -->
+              <!--<span th:text="${user.name}"></span> -->
+              </a>
             </li>
             
             <li class="nav-item">
@@ -50,7 +51,7 @@
 		<span onclick="toggleSidebar()" class="crossBtn">&times;</span>
 		
 		<a href="#" th:href="@{/user/normal_user}" class="item"><i class="fa-solid fa-house"></i> Home</a>
-        <a href="#" th:href="@{/user/showcontacts}" class="item"><i class="fa-solid fa-address-book"></i> View Contact</a>
+        <a href="#" th:href="@{/user/showcontacts/0}" class="item"><i class="fa-solid fa-address-book"></i> View Contact</a>
         <a href="#" th:href="@{/user/addcontact}" class="item"><i class="fa-thin fa-address-book"></i> Add Contact</a>
         <a href="#" class="item"><i class="fa-thin fa-address-book"></i> Your Profile</a>
         <a href="#" class="item"><i class="fa-solid fa-gear"></i> Setting</a>
@@ -92,6 +93,27 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script>
+    	function deleteContact(cid){
+    		swal({
+    			  title: "Are you sure?",
+    			  text: "You want to delete this contact!",
+    			  icon: "warning",
+    			  buttons: true,
+    			  dangerMode: true,
+    			})
+    			.then((willDelete) => {
+    			  if (willDelete) {
+    			   window.location="/user/deleteUser/" +cid;
+    			    });
+    			  } else {
+    			    swal("Your contact is not deleted !!");
+    			  }
+    			});
+    	}
+    </script>
     <script th:src="@{/JS/script.js}"></script>
     
   </body>
