add change-password,otp-verification through email

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is about Page</title>
+    <title>This is Login Page</title>
 </head>
 <body>
 
@@ -35,6 +35,12 @@
                             <div id="register-link" class="text-right">
                                 <a href="/smartcontactmanager/signup/" class="text-info">Register here</a>
                             </div>
+                            
+                           <div class="container text-right">
+                                <a th:href="@{/forgot-password}" >Forgot Password</a>
+                            </div>
+
+                             
                         </form>
                     </div>
                 </div>
