--- a/src/main/resources/templates/normal/show_contacts.html
+++ b/src/main/resources/templates/normal/show_contacts.html
@@ -14,8 +14,17 @@
 		<div class="card mr-3 ml-3" >
 			<div class="card-body">
 				<h1 class="text-center">Your Contacts</h1>
+				<!-- search contact -->
+<div class="search-container my-3">
+
+	<input onKeyUp="search()" id="search-input" type="text" class="form-control" placeholder="Search your contact" />
+	<div class="search-result">
+		
+	</div>
+</div>				
 				
-				<table class="table">
+				
+<table class="table">
   <thead>
     <tr>
       <th scope="col">#Id</th>
